--- a/references.bib
+++ b/references.bib
@@ -15,5 +15,17 @@
   pages = {97–111},
   numpages = {15}
 }
+@article{Suzuki2008,
+   author = {Miho M. Suzuki and Adrian Bird},
+   doi = {10.1038/nrg2341},
+   issn = {1471-0056},
+   issue = {6},
+   journal = {Nature Reviews Genetics},
+   month = {6},
+   pages = {465-476},
+   title = {DNA methylation landscapes: provocative insights from epigenomics},
+   volume = {9},
+   year = {2008},
+}
 
 
